@@ -1,3 +1,6 @@
+2013-08-13 arnaud.fontaine
+* ZODB Components: Add JS file required to find text within Ace Editor.
+
 2013-07-19 arnaud.fontaine
 * Add save button to Ace Editor to save source code while staying on the same page.
 
